--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -116,9 +116,7 @@
                     android:id="@+id/personal_info_container"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </LinearLayout>
+                    android:layout_height="wrap_content"/>
 
             </com.google.android.material.card.MaterialCardView>
 
@@ -144,9 +142,7 @@
                     android:id="@+id/account_info_container"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </LinearLayout>
+                    android:layout_height="wrap_content"/>
 
             </com.google.android.material.card.MaterialCardView>
 
